Bug 150756 - Assertion when opening report for editing from tdf#150732
Summary: Assertion when opening report for editing from tdf#150732
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-09-02 12:33 UTC by Julien Nabet
Modified: 2023-05-08 15:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (17.47 KB, text/plain)
2022-09-02 12:34 UTC, Julien Nabet
Details
bt with debug symbols (11.91 KB, text/plain)
2022-09-05 17:58 UTC, Julien Nabet
Details
bt with debug symbols (11.91 KB, text/plain)
2022-09-06 17:02 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2022-09-02 12:33:57 UTC
Description:
On pc Debian x86-64 with master sources updated today, I got an assertion when opening report for editing from tdf#150732

Steps to Reproduce:
1. Retrieve file from https://bugs.documentfoundation.org/attachment.cgi?id=182125 (tdf#150732)
2. Open the file
3. Go to Reports pane
4. Right click on "Report1" and choose "Edit"

Actual Results:
Assertion

Expected Results:
No assertion


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: dabaf2879673fe4bbe874a2917e7a9200737ba81
CPU threads: 12; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2022-09-02 12:34:57 UTC
Created attachment 182176 [details]
bt with debug symbols
Comment 2 Julien Nabet 2022-09-02 12:36:55 UTC
Noel: it seems this patch
https://cgit.freedesktop.org/libreoffice/core/commit/?id=8611f6e259b807b4f19c8dc0eab86ca648891ce3
ref-count SdrObject

unhides a bug. Any idea by looking at the bt attached?
Comment 3 Commit Notification 2022-09-05 07:11:02 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b9e7617e967c4033d9853e6bc2e96334bf6b243

tdf#150756 Assertion when opening report for editing

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2022-09-05 17:58:46 UTC
Created attachment 182233 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I don't have an assertion when opening BUT:
1) there are no elements at all in the report
2) it crashes (it's not an assertion this time) when closing the report
Comment 5 Julien Nabet 2022-09-05 18:00:26 UTC
(In reply to Julien Nabet from comment #4)
...
> 2) it crashes (it's not an assertion this time) when closing the report
Sorry, it is an assertion:

#4  0x00007f1ff4028395 in __assert_fail_base
    (fmt=0x7f1fe07665aa "%s%s%s :%u : %s%s l'assertion « %s » a échoué.\n%n", assertion=0x7f1fedeaf567 "false && \"Unknown Inventor in SvxDrawPage::CreateShape()\"", file=0x7f1feddf3284 "/home/julien/lo/libreoffice/svx/source/unodraw/unopage.cxx", line=796, function=<optimized out>) at ./assert/assert.c:92
#5  0x00007f1ff4036b02 in __GI___assert_fail
    (assertion=0x7f1fedeaf567 "false && \"Unknown Inventor in SvxDrawPage::CreateShape()\"", file=0x7f1feddf3284 "/home/julien/lo/libreoffice/svx/source/unodraw/unopage.cxx", line=796, function=0x7f1feddff577 "static rtl::Reference<SvxShape> SvxDrawPage::CreateShapeByTypeAndInventor(SdrObjKind, SdrInventor, SdrObject *, SvxDrawPage *, const rtl::OUString &)") at ./assert/assert.c:101
#6  0x00007f1feed5dfbf in SvxDrawPage::CreateShapeByTypeAndInventor(SdrObjKind, SdrInventor, SdrObject*, SvxDrawPage*, rtl::OUString const&)
    (nType=SdrObjKind::ReportDesignFixedText, nInventor=SdrInventor::ReportDesign, pObj=0x55e0841c4450, mpPage=0x55e089b100c0, referer="") at svx/source/unodraw/unopage.cxx:796
Comment 6 Commit Notification 2022-09-06 16:05:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17e27b4a19f22b912460f090b754d11f9a32fb7f

tdf#150756 - Assertion when opening report for editing

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2022-09-06 17:02:09 UTC
Created attachment 182267 [details]
bt with debug symbols

I gave a new try with master sources updated today (d156e891db34e88991a6c18fd3cff6feddfc61c8).
Now I can open the report and it's not empty.
But when closing the report, I got an assertion.
Comment 8 Commit Notification 2022-09-08 09:48:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94b9827f790ea1d37c2e128df1e3dc4b57c5f768

tdf#150756 Assertion when opening report for editing

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2022-09-08 10:02:57 UTC
It works perfectly now, great job! (Thank you for your patience!)
Comment 10 Noel Grandin 2022-09-08 10:14:12 UTC
And thank you for testing :-)