tdf#150756 Assertion when opening report for editing

Change-Id: I59cbbc63175a95568f9a0390ab618a5f32d6488b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139331
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>